# watchdog

./: .gitignore  .~lock.Prompts.docx#  .~lock.WATCHDOG_Hackathon_Blueprint.docx#  Prompts.docx  README.md  WATCHDOG_Hackathon_Blueprint.docx  pyproject.toml  submission_checklist.md  watchdog_report.html
agents/: __init__.py  code_analyst.py  critic.py  patch_writer.py  reporter.py  reviewer.py  scanner.py  threat_correlator.py  trust_analyst.py
chroma_db/: chroma.sqlite3
data/: seed_chromadb.py
data/attack_patterns/: pytorch_2022.txt  xz_utils_2024.txt
data/metadata/: maintainer_fake.json
reports/20260314_111046/: watchdog_report.html
reports/20260314_111621/: watchdog_report.html
reports/20260314_112246/: watchdog_report.html
reports/20260314_143423/: watchdog_report.html
reports/20260314_143428/: watchdog_report.html
reports/20260314_145402/: watchdog_report.html
reports/20260314_150619/: watchdog_report.html
reports/20260314_150928/: watchdog_report.html
reports/20260314_150957/: watchdog_report.html
reports/20260314_151418/: watchdog_report.html
reports/20260314_151630/: watchdog_report.html
reports/20260315_112719/: watchdog_report.html
reports/20260315_112936/: watchdog_report.html
reports/20260315_113414/: watchdog_report.html
reports/20260315_114033/: watchdog_report.html
reports/20260315_120055/: watchdog_report.html
reports/20260315_120708/: watchdog_report.html
schemas/: models.py
scripts/: demo_video_script.md  run_demo.sh  test_pipeline.py
slides/: slides_outline.md
templates/: report.html.j2  report.md.j2
utils/: ast_extractor.py  chroma_utils.py  file_utils.py
vuln_app/: app.py  test_auth.py
vuln_app/computil/: __init__.py
webui/: app.py
workflow/: graph.py  state.py
