[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchdog"
version = "0.1.0"
description = "Autonomous Software Supply Chain Threat Intelligence Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "WATCHDOG Team" },
]
keywords = ["security", "supply-chain", "ai-agents", "langgraph", "cybersecurity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  # ── Core agent framework ────────────────────────────────────────────────────
  "langgraph>=0.1.0",
  "langchain-core>=0.2.0",

  # ── LLM client (local Ollama) ───────────────────────────────────────────────
  "ollama>=0.1.8",

  # ── Data validation ─────────────────────────────────────────────────────────
  "pydantic>=2.5.0",

  # ── Vector database & embeddings ────────────────────────────────────────────
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",

  # ── Static analysis ─────────────────────────────────────────────────────────
  "bandit>=1.7.8",

  # ── Web UI (Gradio) ─────────────────────────────────────────────────────────
  "gradio>=4.26.0",

  # ── API layer ───────────────────────────────────────────────────────────────
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",

  # ── Templating ──────────────────────────────────────────────────────────────
  "jinja2>=3.1.3",

  # ── Terminal output ─────────────────────────────────────────────────────────
  "rich>=13.7.0",

  # ── HTTP utilities (used by Trust Analyst to query PyPI/GitHub APIs) ────────
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]
vuln-app = [
  # Kept separate so the main project doesn't require Flask
  "flask>=3.0.0",
]

[project.scripts]
watchdog = "webui.app:main"
watchdog-seed = "data.seed_chromadb:seed_chromadb"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "vuln_app*", "scripts*"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

# ── Ruff linter configuration ─────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long — handled by formatter

# ── mypy type checker ─────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

# ── pytest configuration ─────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
